# icmt

./: Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
src/: config.rs  git.rs  main.rs  prompts.rs
src/ai/completions/: chatgpty.rs  mod.rs  prompts.rs
src/chat_gpt/: completions.rs
src/cli/: commands.rs  mod.rs  utils.rs
src/commands/: commit.rs  mod.rs  shell.rs  squash.rs
src/git/: commands.rs  commits.rs  gitmoji.rs  mod.rs  utils.rs
