[package]
name = "icmt"
license = "MIT"
edition = "2021"
version = "0.1.1"
readme = "README.md"
categories = ["command-line-utilities"]
homepage = "https://github.com/jmillana/icmt"
repository = "https://github.com/jmillana/icmt"
authors = ["Jordi Marimon <jordi@marimon.tech>"]
description = "Generate commit messages with AI, using chat-gpt-3.5-turbo"

[dependencies]
log = "0.4.19"
question = "0.2.2"
spinners = "4.1.0"
serde_json = { version = "1.0.100", default-features = false }
serde = { version = "1.0.171", default-features = false }
clap = { version = "4.3.11", features = ["derive"] }
reqwest = { version = "0.11.18", default-features = false, features = [
  "json",
  "blocking",
  "rustls-tls",
] }
bat = { version = "0.23.0", default-features = false, features = [
  "regex-onig",
] }
colored = "2.0.4"
regex = "1.9.1"
