[package]
name = "icmt"
license = "MIT"
edition = "2021"
version = "0.3.2"
readme = "README.md"
categories = ["command-line-utilities"]
homepage = "https://github.com/jmillana/icmt"
repository = "https://github.com/jmillana/icmt"
authors = ["Jordi Marimon <jordi@marimon.tech>"]
description = "Generate commit messages with AI, using chat-gpt-3.5-turbo"

[dependencies]
log = "0.4.20"
question = "0.2.2"
spinners = "4.1.0"
serde_json = { version = "1.0.107", default-features = false }
serde = { version = "1.0.190", default-features = false }
clap = { version = "4.4.7", features = ["derive"] }
reqwest = { version = "0.11.22", default-features = false, features = [
  "json",
  "blocking",
  "rustls-tls",
] }
bat = { version = "0.24.0", default-features = false, features = [
  "regex-onig",
] }
colored = "2.0.4"
regex = { version = "1.10.2" }
env_logger = "0.10.0"
